fix: messagebus and rule saleitem cancelled

--- a/template/frontend/AppClientSale/src/app/pages/dashboard/sale/modify-sale/modify-sale.component.html
+++ b/template/frontend/AppClientSale/src/app/pages/dashboard/sale/modify-sale/modify-sale.component.html
@@ -18,6 +18,13 @@
 
     <div class="form-row">
       <mat-form-field class="example-full-width">
+        <mat-label>Status</mat-label>
+        <input matInput formControlName="status" type="text" readonly />
+      </mat-form-field>
+    </div>
+
+    <div class="form-row">
+      <mat-form-field class="example-full-width">
         <mat-label>Customer ID</mat-label>
         <input matInput formControlName="customerId" type="text" placeholder="Customer ID" />
         <mat-error *ngIf="form.controls['customerId'].hasError('required')">Customer ID is required</mat-error>
